# lil-game

./: .gitignore  LICENSE  Makefile  README.md
assets/fonts/ThaloriaRegular/: readme.txt
src/: CMakeLists.txt  main.cpp
src/cmake/: download_font.cmake
src/composer/: CMakeLists.txt  composer.cpp  composer.h  sfml_actions.cpp  sfml_actions.h
src/first_level/: CMakeLists.txt  first_level_main.cpp  first_level_main.h
src/menu/: CMakeLists.txt  mainmenu_main.cpp  mainmenu_main.h  mainmenu_model.cpp
